Added basic navigation using window.location

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/typography.css">
+    <script src="js/nav.js" type="module" defer></script>
     <title>User Management System</title>
 </head>
 <body>
@@ -14,8 +15,9 @@
         </div>
         <nav class="site-nav">
             <ul class="nav-list">
-                <li class="nav-li-item">Login</li>
-                <li class="nav-li-item">Register</li>
+                <li id="home-link" class="nav-li-item">Home</li>
+                <li id="login-link" class="nav-li-item">Login</li>
+                <li id="register-link" class="nav-li-item">Register</li>
             </ul>
         </nav>
     </header>
