--- a/login.html
+++ b/login.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/typography.css">
+    <script src="js/nav.js" type="module" defer></script>
     <title>UMS - Login</title>
 </head>
 <body>
+    <header class="site-header">
+        <div class="logo">
+            <img src="" />
+        </div>
+        <nav class="site-nav">
+            <ul class="nav-list">
+                <li id="home-link" class="nav-li-item">Home</li>
+                <li id="login-link" class="nav-li-item">Login</li>
+                <li id="register-link" class="nav-li-item">Register</li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <form id="login-form" action="includes/loginformhandler.inc.php" method="post">
             <h1>Sign in to your account.</h1>
@@ -21,7 +34,7 @@
                 <input class="login-input" type="password" name="password" id="password" />
                 <span class="error-message" id="password-login-error"></span>
             </fieldset>
-            <p>Have no account yet? <a href="./register.php">Sign up here</a></p>
+            <p>Have no account yet? <a href="./register.html">Sign up here</a></p>
             <button>Submit</button>
         </form>
     </main>
