--- a/register.html
+++ b/register.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/typography.css">
+    <script src="js/nav.js" type="module" defer></script>
     <title>UMS - Register</title>
 </head>
 <body>
     <main>
+        <header class="site-header">
+            <div class="logo">
+                <img src="" />
+            </div>
+            <nav class="site-nav">
+                <ul class="nav-list">
+                    <li id="home-link" class="nav-li-item">Home</li>
+                    <li id="login-link" class="nav-li-item">Login</li>
+                    <li id="register-link" class="nav-li-item">Register</li>
+                </ul>
+            </nav>
+        </header>
         <form id="register-form" action="includes/registerformhandler.inc.php" method="post">
             <h1>Register a new account.</h1>
             <fieldset>
@@ -31,7 +44,7 @@
                 <input class="register-input" type="password" name="password" id="password" />
                 <span class="error-message" id="password-error"></span>
             </fieldset>
-            <p>Already have an account? <a href="./index.php">Sign in here</a></p>
+            <p>Already have an account? <a href="./login.html">Sign in here</a></p>
             <button>Submit</button>
         </form>
     </main>
