Added form validation and error handling for register form

--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/typography.css">
     <script src="js/nav.js" type="module" defer></script>
+    <script src="js/register.js" type="module" defer></script>
     <title>UMS - Register</title>
 </head>
 <body>
