Implemented login functionality, validation and error handling

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/typography.css">
     <script src="js/nav.js" type="module" defer></script>
+    <script src="js/login.js" type="module" defer></script>
     <title>UMS - Login</title>
 </head>
 <body>
