--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/typography.css">
     <script src="js/nav.js" type="module" defer></script>
+    <script src="js/home.js" type="module" defer></script>
     <title>User Management System</title>
 </head>
 <body>
     <header class="site-header">
         <div class="logo">
-            <img src="" />
+            <img src="static/logo.png" alt="logo"/>
         </div>
         <nav class="site-nav">
             <ul class="nav-list">
@@ -23,7 +25,8 @@
     </header>
     <main>
         <img src="static/systems-management.jpg" />
-        <h1>Welcome</h1>
+        <h1 class="heading1">Welcome to UMS</h1>
+        <h2 class="heading2">World's best User Management System!</h2>
     </main>
 </body>
 </html>
