--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/typography.css">
     <script src="js/nav.js" type="module" defer></script>
     <script src="js/login.js" type="module" defer></script>
@@ -12,7 +13,7 @@
 <body>
     <header class="site-header">
         <div class="logo">
-            <img src="" />
+            <img src="static/logo.png" alt="logo"/>
         </div>
         <nav class="site-nav">
             <ul class="nav-list">
