--- a/register.html
+++ b/register.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/typography.css">
     <script src="js/nav.js" type="module" defer></script>
     <script src="js/register.js" type="module" defer></script>
     <title>UMS - Register</title>
 </head>
 <body>
+    <header class="site-header">
+        <div class="logo">
+            <img src="static/logo.png" alt="logo"/>
+        </div>
+        <nav class="site-nav">
+            <ul class="nav-list">
+                <li id="home-link" class="nav-li-item">Home</li>
+                <li id="login-link" class="nav-li-item">Login</li>
+                <li id="register-link" class="nav-li-item">Register</li>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <header class="site-header">
-            <div class="logo">
-                <img src="" />
-            </div>
-            <nav class="site-nav">
-                <ul class="nav-list">
-                    <li id="home-link" class="nav-li-item">Home</li>
-                    <li id="login-link" class="nav-li-item">Login</li>
-                    <li id="register-link" class="nav-li-item">Register</li>
-                </ul>
-            </nav>
-        </header>
         <form id="register-form" action="includes/registerformhandler.inc.php" method="post">
             <h1>Register a new account.</h1>
             <fieldset>
