--- a/register.html
+++ b/register.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/typography.css">
-    <script src="js/nav.js" type="module" defer></script>
-    <script src="js/register.js" type="module" defer></script>
     <title>UMS - Register</title>
 </head>
 <body>
@@ -51,5 +49,7 @@
             <button>Submit</button>
         </form>
     </main>
+    <script src="js/nav.js" type="module"></script>
+    <script src="js/register.js" type="module"></script>
 </body>
 </html>
